--- a/build.gradle
+++ b/build.gradle
@@ -49,9 +49,12 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    implementation 'com.icezhg:commons:2.0.1'
+    implementation 'com.icezhg:encryptor:1.0.0'
     implementation 'com.icezhg:spring-boot-starter-encryptor:1.0.0'
-    implementation 'com.nimbusds:nimbus-jose-jwt:9.24.4'
+    implementation 'com.github.oshi:oshi-core:6.3.2'
     implementation 'commons-codec:commons-codec:1.15'
+    implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'es.moki.ratelimitj:ratelimitj-inmemory:0.7.0'
