--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.icezhg:encryptor:1.0.0'
     implementation 'com.icezhg:spring-boot-starter-encryptor:1.0.0'
     implementation 'com.github.oshi:oshi-core:6.3.2'
+    implementation 'com.nimbusds:nimbus-jose-jwt:9.24.4'
     implementation 'commons-codec:commons-codec:1.15'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
