--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,3 +21,9 @@ management:
     web:
       exposure:
         include: health, info
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+    cache-enabled: false
+    jdbc-type-for-null: null
+  mapper-locations: classpath:mapper/**/*.xml
